tests/ui/server_send/error/item-is-not-a-function.stderr
error: this attribute takes from one to three assign arguments

         = help: use `#[server_send(level=Level::WARN, name="Name", skip=[a, b])]`

 --> tests/ui/server_send/error/item-is-not-a-function.rs:3:15
  |
3 | #[server_send(trace, "Some")]
  |               ^^^^^
